# onnx-object-detection

./: .gitignore  Cargo.toml  Makefile.toml  README.md  labels.csv
.github/workflows/: release-build.yml  release.yml
src/: main.rs
src/adapter/: mjpeg_handler.rs  mod.rs
src/domain/: detection.rs  error.rs  frame.rs  mod.rs
src/infrastructure/: config.rs  image_renderer.rs  label_loader.rs  mod.rs  yolox_detector.rs
src/infrastructure/camera/: mod.rs  v4l2.rs
src/use_case/: detection_pipeline.rs  mod.rs  port.rs
