[package]
name = "onnx-object-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
v4l = "0.14"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
imageproc = "0.25"
http-body = "1"
bytes = "1"

[dev-dependencies]
tempfile = "3"
